--- a/css/日誌.css
+++ b/css/日誌.css
@@ -5,32 +5,36 @@ body {
 	-webkit-writing-mode: vertical-rl;
 }
 
-
 p.內容 a {
 	color: aqua;
 }
 
-p.內容 a::selection,
-p.內容 a ruby::selection,
-p.內容 a rt::selection,
-p.內容 a b::selection {
-	color: black;
-	background-color: aqua;
-}
-
 p.內容::selection,
-p.內容 ruby::selection,
-p.內容 rt::selection,
-p.內容 b::selection {
+p.內容 *::selection {
 	color: black;
 	background-color: #ffffff;
 }
 
+p.內容 a::selection,
+p.內容 a *::selection {
+	color: black;
+	background-color: aqua;
+}
+
+p.引用 {
+	font-size: medium;
+	padding: 10px;
+	border: 1px solid #808080;
+}
+
+p.引用::selection {
+	color: white;
+	background-color: #808080;
+
+}
 
 p.日期::selection,
-p.日期 ruby::selection,
-p.日期 rt::selection,
-p.日期 b::selection {
+p.日期 *::selection {
 	color: black;
 	background-color: #80ffaa;
 }
@@ -98,3 +102,19 @@ hr.轉日 {
 	}
 
 }
+
+/* .圖片全屏 {
+	max-width: 100%;
+	height: auto;
+	cursor: pointer;
+}
+
+.fullscreen {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100%;
+	z-index: 9999;
+	cursor: pointer;
+} */
