--- a/css/日誌.css
+++ b/css/日誌.css
@@ -5,36 +5,50 @@ body {
 	-webkit-writing-mode: vertical-rl;
 }
 
-p.內容 a {
+div.內容 a {
 	color: aqua;
 }
 
-p.內容::selection,
-p.內容 *::selection {
+div.內容::selection,
+div.內容 *::selection {
 	color: black;
 	background-color: #ffffff;
 }
 
-p.內容 a::selection,
-p.內容 a *::selection {
+div.內容,
+div.內容 *{
+	white-space: pre-wrap;
+}
+
+div.內容 a::selection,
+div.內容 a *::selection {
 	color: black;
 	background-color: aqua;
 }
 
-p.引用 {
+div.引用,
+div.播放器 {
 	font-size: medium;
 	padding: 10px;
 	border: 1px solid #808080;
+	margin: 30px;
 }
 
-p.引用::selection {
+div.播放器 {
+	writing-mode: horizontal-tb;
+	-webkit-writing-mode: horizontal-tb;
+	font-size: 14px;
+	padding: none;
+}
+
+div.引用::selection {
 	color: white;
 	background-color: #808080;
 
 }
 
-p.日期::selection,
-p.日期 *::selection {
+div.日期::selection,
+div.日期 *::selection {
 	color: black;
 	background-color: #80ffaa;
 }
@@ -102,19 +116,3 @@ hr.轉日 {
 	}
 
 }
-
-/* .圖片全屏 {
-	max-width: 100%;
-	height: auto;
-	cursor: pointer;
-}
-
-.fullscreen {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100vw;
-	height: 100%;
-	z-index: 9999;
-	cursor: pointer;
-} */
