改豎排符號了

--- a/css/98.css
+++ b/css/98.css
@@ -1,4 +1,4 @@
-/*! 98.css v0.1.20 - https://github.com/jdan/98.css */
+/**! 98.css v0.1.20 - https://github.com/jdan/98.css **/
 @font-face {
 	font-family: "Pixelated MS Sans Serif";
 	font-style: normal;
@@ -827,4 +827,4 @@ table>tbody>tr>* {
 	padding: 0 6px
 }
 
-/* # sourceMappingURL=98.css.map */
+/** # sourceMappingURL=98.css.map */
