--- a/css/404.css
+++ b/css/404.css
@@ -1,11 +1,12 @@
 @font-face {
-	font-family: "HanaMinA";
-	src: url(https://cdn.jsdelivr.net/gh/max32002/max-hana@1.1/webfont/HanaMinA.woff2) format("woff2"), url(https://cdn.jsdelivr.net/gh/max32002/max-hana@1.1/webfont/HanaMinA.woff) format("woff");
+	font-family: '所求䈎尋无HanaMin';
+	src: url('/fonts/所求䈎尋无HanaMin.woff2') format('woff2');
+	font-display: swap;
 }
 
 body *,
 body {
-	font-family: 'HanaMinA';
+	font-family: '所求䈎尋无HanaMin';
 }
 
 body {
