--- a/css/日誌.css
+++ b/css/日誌.css
@@ -39,7 +39,7 @@ div.內容 a *::selection {
 }
 
 div.塊 {
-	font-size: 14px;
+	font-size: 20px;
 	padding: 10px;
 	border: 1px solid #808080;
 	margin: 30px;
@@ -75,14 +75,16 @@ br::selection {
 	background-color: #00000000;
 }
 
-hr.同日 {
+hr {
 	border: none;
-	border-right: 3px solid #ffffff10;
+}
+
+hr.同日 {
+	border-right: 3px solid #ffffff06;
 }
 
 hr.轉日 {
-	border: none;
-	border-right: 3px solid #ffffff60;
+	border-right: 3px solid #ffffff30;
 }
 
 .日期 {
@@ -92,12 +94,13 @@ hr.轉日 {
 }
 
 .內容 {
-	font-size: 20px;
+	font-size: 25px;
 	color: #ffffff;
 	padding-left: 0px;
 }
 
 .複製今日道曆 {
+	font-size: 25px;
 	text-decoration: none;
 	border: 0.5px dashed #00000000;
 	color: white;
@@ -107,7 +110,6 @@ hr.轉日 {
 	padding-bottom: 10px;
 	padding-left: 10px;
 	padding-right: 10px;
-	font-size: 20px;
 }
 
 @media (hover: hover) {
