Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   404.html
	renamed:    "assets/\345\234\226\345\203\217/IMG_9503.png" -> "assets/\345\234\226\350\261\241/IMG_9503.png"
	renamed:    "assets/\345\234\226\345\203\217/\346\226\207\350\200\205\347\207\222\346\256\272\344\272\272-\346\234\211\346\241\206-\346\212\240\344\270\213-00ff80.png" -> "assets/\345\234\226\350\261\241/\346\226\207\350\200\205\347\207\222\346\256\272\344\272\272-\346\234\211\346\241\206-\346\212\240\344\270\213-00ff80.png"
	renamed:    "assets/\345\234\226\345\203\217/\346\263\211\346\254\241\346\226\271\351\226\211\347\234\274\346\234\235\345\217\263\351\243\237\346\214\207\345\220\221\344\270\212.png" -> "assets/\345\234\226\350\261\241/\346\263\211\346\254\241\346\226\271\351\226\211\347\234\274\346\234\235\345\217\263\351\243\237\346\214\207\345\220\221\344\270\212.png"
	renamed:    "assets/\345\234\226\345\203\217/\346\263\225\351\241\257\346\235\261\347\237\263\350\254\224\350\253\247\347\204\266.jpg" -> "assets/\345\234\226\350\261\241/\346\263\225\351\241\257\346\235\261\347\237\263\350\254\224\350\253\247\347\204\266.jpg"
	renamed:    "assets/\345\234\226\345\203\217/\350\265\244\346\231\257\351\235\221\351\235\242\346\200\222\350\246\226\347\233\256.jpg" -> "assets/\345\234\226\350\261\241/\350\265\244\346\231\257\351\235\221\351\235\242\346\200\222\350\246\226\347\233\256.jpg"
	modified:   css/index.css
	modified:   "fonts/\345\217\252\351\234\200HanaMinA.ttf"
	modified:   "fonts/\345\217\252\351\234\200HanaMinA.txt"
	modified:   index.html
	modified:   javascript/index/index.js
	renamed:    "javascript/\345\245\275\345\244\232\345\207\275\346\225\270\357\274\201.js" -> "javascript/\345\205\254\345\205\261/\345\245\275\345\244\232\345\207\275\346\225\270\357\274\201.js"
	renamed:    "javascript/\346\251\253\3

--- a/css/index.css
+++ b/css/index.css
@@ -65,7 +65,7 @@ body {
 
 #个人紹介>h2,
 #个人紹介>h2 * {
-	font-size: 50px;
+	font-size: 45px;
 }
 
 #个人紹介>h3,
@@ -85,7 +85,7 @@ body {
 
 /* 默认的遮挡颜色 */
 .遮擋下 {
-	background-color: #00000080;
+	background-color: black;
 }
 
 .遮擋下 {
@@ -93,19 +93,31 @@ body {
 	transition: 0.3s;
 }
 
-.遮擋下.hide-children * {
+.遮擋下.遮擋有 * {
+	background-color: black;
 	opacity: 0;
 	transition: 0.3s;
 }
 
-
-.遮擋下.hide-overlay {
-	color: initial;
+.遮擋下.遮擋空 {
+	color: #fff;
 	background-color: transparent;
 }
 
-.遮擋下 *:not(a) {
-	color: black;
+#个人紹介 .遮擋下.遮擋空 {
+	color: #ff0000;
+}
+
+#个人紹介 .遮擋下.遮擋有 {
+	background-color: #000000;
+}
+
+#Q1 .遮擋下.遮擋空 {
+	color: #ff0000;
+}
+
+#Q1 .遮擋下.遮擋有 {
+	background-color: #ff0000;
 }
 
 div.塊 {
