--- a/css/index.css
+++ b/css/index.css
@@ -19,7 +19,7 @@ body {
 	background-color: black;
 	color: white;
 	writing-mode: vertical-rl;
-	overflow-y: hidden;
+	/* overflow-y: hidden; */
 }
 
 .聊天 {
@@ -34,17 +34,21 @@ body {
 
 #上列 {
 	height: 675px;
-	vertical-align: baseline;
+	vertical-align: top;
 }
 
 #下列 {
+	/* min-height: 225px; */
 	height: 225px;
-	width: auto;
-	vertical-align: baseline;
+	vertical-align: top;
+}
+
+#Q1 {
+	margin-right: 0;
 }
 
 #个人紹介 {
-	border: none;
+	border-color: red;
 	background-color: red;
 	color: black;
 }
@@ -56,20 +60,21 @@ body {
 
 
 
-#个人紹介>h1,
-#个人紹介>h2,
-#个人紹介>h3 {
+#个人紹介 h1,
+#个人紹介 h2,
+#个人紹介 h2 *,
+#个人紹介 h3 {
 	font-family: "只需HanaMinA";
 
 }
 
-#个人紹介>h2,
-#个人紹介>h2 * {
+#个人紹介 h2,
+#个人紹介 h2 * {
 	font-size: 45px;
 }
 
-#个人紹介>h3,
-#个人紹介>h3 * {
+#个人紹介 h3,
+#个人紹介 h3 * {
 	font-size: 35px;
 }
 
@@ -126,6 +131,7 @@ div.塊 {
 	color: white;
 	padding: 15px 10px;
 	margin: 5px;
+	margin-right: 0;
 }
 
 @-moz-document url-prefix() {
