--- a/css/index.css
+++ b/css/index.css
@@ -44,6 +44,13 @@ body {
 	border-radius: 2.5px;
 }
 
+.時間 {
+	color: #000000a0;
+	font-style: italic;
+	text-decoration: underline wavy;
+	text-decoration-thickness: 1px;
+}
+
 #上列 {
 	height: 675px;
 	vertical-align: top;
@@ -71,12 +78,17 @@ body {
 	font-size: 23px;
 }
 
+#个人紹介 *::selection {
+	background-color: black;
+	color: red;
+}
+
 #个人紹介 a {
 	color: #ffffff;
 }
 
 #个人紹介 a:hover {
-	color: #ff0000;
+	color: #000000;
 	background-color: #ffffff;
 }
 
@@ -86,7 +98,7 @@ body {
 
 #个人紹介 .「中國」::selection,
 #个人紹介 .「中國」:hover {
-	color: #000000;
+	/* color: #000000; */
 	background-color: yellow;
 }
 
@@ -107,11 +119,11 @@ body {
 	font-size: 35px;
 }
 
-#个人紹介 *::selection {
-	background-color: black;
-	color: red;
+#个人紹介 hr {
+	border: none;
+	border: 2px solid black;
+	/* border: 1px #000000 ; */
 }
-
 
 div.塊 {
 	border: 2px solid #383838;
