Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   "assets/\346\227\245\350\252\214.txt"
	deleted:    "assets/\347\265\265\346\226\207\345\255\227/CHINA-FLAG.jpg"
	deleted:    "assets/\347\265\265\346\226\207\345\255\227/CODE.jpg"
	modified:   css/index.css
	modified:   "css/\346\227\245\350\252\214.css"
	modified:   index.html
	modified:   "javascript/\345\205\254\345\205\261/\347\265\265\346\226\207\345\255\227.js"
	modified:   "javascript/\346\227\245\350\252\214/\345\207\246\347\220\206\346\226\207\346\234\254.js"
	modified:   "\346\227\245\350\252\214.html"

Changes not staged for commit:
	modified:   "assets/\346\227\245\350\252\214.txt"

--- a/css/日誌.css
+++ b/css/日誌.css
@@ -17,6 +17,13 @@ body {
 	-webkit-writing-mode: vertical-rl;
 }
 
+.絵文字圖象 {
+	height: 1em;
+	width: 1em;
+	image-rendering: pixelated;
+	border-radius: 2.5px;
+}
+
 div.內容 a {
 	color: aqua;
 }
