--- a/css/index.css
+++ b/css/index.css
@@ -37,7 +37,7 @@ body {
 	width: 270px;
 }
 
-.符號圖象 {
+.絵文字圖象 {
 	height: 1em;
 	width: 1em;
 	image-rendering: pixelated;
@@ -96,7 +96,6 @@ body {
 	color: yellow;
 }
 
-#个人紹介 .「中國」::selection,
 #个人紹介 .「中國」:hover {
 	/* color: #000000; */
 	background-color: yellow;
@@ -122,7 +121,6 @@ body {
 #个人紹介 hr {
 	border: none;
 	border: 2px solid black;
-	/* border: 1px #000000 ; */
 }
 
 div.塊 {
