Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   "assets/\346\227\245\350\252\214.txt"
	new file:   "assets/\347\265\265\346\226\207\345\255\227/BIRTH.png"
	new file:   "assets/\347\265\265\346\226\207\345\255\227/CHINA-FLAG.png"
	new file:   "assets/\347\265\265\346\226\207\345\255\227/CODE.png"
	new file:   "assets/\347\265\265\346\226\207\345\255\227/GENDER.png"
	new file:   "assets/\347\265\265\346\226\207\345\255\227/\345\242\250\351\217\241.gif"
	new file:   "assets/\347\265\265\346\226\207\345\255\227/\345\242\250\351\217\241.png"
	new file:   "assets/\347\265\265\346\226\207\345\255\227/\345\277\203.gif"
	new file:   "assets/\347\265\265\346\226\207\345\255\227/\345\277\203.png"
	modified:   css/index.css
	modified:   "css/\346\210\221\347\232\204\345\234\226\345\206\212.css"
	modified:   "css/\346\227\245\350\252\214.css"
	new file:   "fonts/\351\226\271\345\211\262unifont-Medium.woff2"
	deleted:    "fonts/\351\226\271\345\211\262unifont.woff2"
	modified:   index.html
	modified:   "javascript/\345\205\254\345\205\261/\347\265\265\346\226\207\345\255\227.js"
	modified:   "javascript/\345\205\254\345\205\261/\350\261\216\346\216\222\347\254\246\350\231\237.js"

睡覺去了

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: '閹割unifont';
-	src: url('/fonts/閹割unifont.woff2') format('woff2');
+	src: url('/fonts/閹割unifont-Medium.woff2') format('woff2');
 	font-display: swap;
 }
 
