--- a/css/我的圖冊.css
+++ b/css/我的圖冊.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: '閹割unifont';
-	src: url('/fonts/閹割unifont.woff2') format('woff2');
+	src: url('/fonts/閹割unifont-Medium.woff2') format('woff2');
 	font-display: swap;
 }
 
