Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   css/index.css
	modified:   index.html

--- a/css/index.css
+++ b/css/index.css
@@ -20,11 +20,10 @@ body {
 	color: white;
 	writing-mode: vertical-rl;
 	/* overflow-y: hidden; */
-	text-orientation: upright;
 }
 
-:lang(en) {
-	text-orientation: initial;
+:lang(han-char) {
+	text-orientation: upright;
 }
 
 .聊天 {
