Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	renamed:    css/98-2.css -> css/98/98-2.css
	renamed:    css/98.css -> css/98/98.css
	modified:   css/index.css
	new file:   css/wiki.css
	modified:   index.html
	new file:   javascript/wiki/wiki.js
	new file:   "javascript/\345\205\254\345\205\261/showdown.min.js"
	modified:   "javascript/\345\205\254\345\205\261/\347\247\201\347\224\250\345\255\227.js"
	modified:   "javascript/\345\205\254\345\205\261/\347\265\265\346\226\207\345\255\227.js"
	modified:   "javascript/\346\227\245\350\252\214/\345\207\246\347\220\206\346\226\207\346\234\254.js"
	new file:   wiki.html
	new file:   "wiki/\344\270\255\345\234\213.md"
	renamed:    "wiki/\344\270\255\345\234\213.html" -> "wiki/\346\200\247\345\210\245\345\233\233\345\205\203\350\253\226.md"
	modified:   "\346\227\245\350\252\214.html"

--- a/css/index.css
+++ b/css/index.css
@@ -96,12 +96,20 @@ body {
 	background-color: #ffffff;
 }
 
+#个人紹介 .wiki {
+	color: #000000;
+}
+
+#个人紹介 .wiki:hover {
+	color: #000000;
+	background-color: #ffffff;
+}
+
 #个人紹介 .「中國」 {
 	color: yellow;
 }
 
 #个人紹介 .「中國」:hover {
-	/* color: #000000; */
 	background-color: yellow;
 }
 
