Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   css/wiki.css
	modified:   javascript/wiki/wiki.js
	new file:   json/showdown/showdownConfig.json
	new file:   showdown/dist/showdown.js
	new file:   showdown/dist/showdown.js.map
	new file:   showdown/dist/showdown.min.js
	new file:   showdown/dist/showdown.min.js.map
	modified:   wiki.html
	modified:   "wiki/\344\270\255\345\234\213.md"
	modified:   "wiki/\346\200\247\345\210\245\345\233\233\345\205\203\350\253\226.md"
	renamed:    98 copy.html -> "\350\251\246\351\251\227/98 copy.html"
	renamed:    98.html -> "\350\251\246\351\251\227/98.html"
	new file:   "\350\251\246\351\251\227/\350\251\246\351\251\227Table.html"

終於！！！！！！！！！！！！！！
把配置文件弄出來了！！！！！！！！！！！！

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -44,6 +44,8 @@ html {
 
 #MD內部 h1 {
 	font-size: 50px;
+	border-left: 3px solid;
+	padding-left: 20px;
 }
 
 #MD內部 h3 {
@@ -51,10 +53,17 @@ html {
 	margin: 0px;
 }
 
-/* #MD內部 {
-	
-} */
+#MD內部 blockquote {
+	color: #a1ffe0ee;
+	font-style: italic;
+	border-top: 7px solid;
+	padding-top: 20px;
+}
 
+#MD內部 blockquote *::selection {
+	color: #00000080;
+	background-color: #a1ffe0ee;
+}
 
 /**                                                                     **/
 /**                                介面列表                              **/
