--- a/css/wiki.css
+++ b/css/wiki.css
@@ -33,8 +33,8 @@ html {
 }
 
 #MD外部 *::selection {
-	background-color: #00000080;
-	color: #ffffff80;
+	color: #1c1f24;
+	background-color: white;
 }
 
 #MD內部 {
@@ -60,28 +60,137 @@ html {
 	padding-top: 20px;
 }
 
+#MD內部 a {
+	color: #a1ecff;
+}
+
 #MD內部 blockquote *::selection {
-	color: #00000080;
+	color: #1c1f24;
 	background-color: #a1ffe0ee;
 }
+
+#MD內部 table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+#MD內部 th,
+#MD內部 td {
+	border: 1px solid #ffffff08;
+	padding: 8px;
+	text-align: left;
+}
+
+#MD內部 th {
+	border-left: 1px solid #19332a;
+}
+
+#MD內部 thead {
+	outline: 1px solid #19332a;
+}
+
+#MD內部 tr:nth-child(even) {
+	background-color: #ffffff09;
+}
+
+#MD內部 th {
+	background-color: #22473a;
+	color: white;
+}
+
+#MD內部 th::selection,
+#MD內部 th *::selection {
+	background-color: #448d73;
+	color: #1c1f24;
+}
+
 
 /**                                                                     **/
 /**                                介面列表                              **/
 /**                                                                     **/
 
-#page-list ul {
-	list-style-type: none;
-	padding: 0;
+#䈎彙外 {
+	width: 100vw;
+	height: 100vh;
+	writing-mode: vertical-rl;
+	background-color: #1c1f24;
+	color: white;
+	font-family: 閹割unifont;
 }
 
-#page-list li {
-	padding: 5px;
-	margin: 5px 0;
+#䈎彙 *::selection {
+	color: #1c1f24;
+	background-color: white;
 }
 
-#page-list a {
-	text-decoration: none;
-	color: blue;
+#䈎彙 {
+	margin: 50px;
+	font-size: 20px;
+}
+
+#䈎彙 li {
+	padding: 10px;
+}
+
+
+#䈎彙 table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+#䈎彙 th,
+#䈎彙 td {
+	border: 1px solid #ffffff08;
+	padding: 8px;
+	text-align: left;
+}
+
+#䈎彙 thead {
+	outline: 1px solid #15dd7c2d;
+}
+
+#䈎彙 tr:nth-child(even) {
+	background-color: #ffffff09;
+}
+
+#䈎彙 th {
+	background-color: #15dd7c2d;
+	border-left: 1px solid #15dd7c2d;
+	color: white;
+}
+
+#䈎彙 th::selection,
+#䈎彙 th *::selection {
+	background-color: #448d73;
+	color: #1c1f24;
+}
+
+
+#䈎彙 a {
+	color: #a1ecff;
+}
+
+#䈎彙 a::selection,
+#䈎彙 a *::selection,
+#䈎彙 a:hover,
+#䈎彙 a *:hover {
+	color: white;
+	background-color: #62909b;
+}
+
+#䈎彙 a.「中國」 {
+	color: yellow;
+}
+
+#䈎彙 a.「中國」:hover {
+	background-color: yellow;
+	color: red;
+}
+
+#䈎彙 a.「中國」::selection,
+#䈎彙 a.「中國」 *::selection {
+	background-color: yellow;
+	color: #1c1f24;
 }
 
 /**                                                                     **/
