Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	new file:   "assets/\344\210\216\351\235\242\345\234\226\346\250\231/wiki/red.svg"
	deleted:    "assets/\347\265\265\346\226\207\345\255\227/BIRTH.gif"
	deleted:    "assets/\347\265\265\346\226\207\345\255\227/CHINA-FLAG.gif"
	deleted:    "assets/\347\265\265\346\226\207\345\255\227/CODE.gif"
	deleted:    "assets/\347\265\265\346\226\207\345\255\227/GENDER.gif"
	new file:   "assets/\347\265\265\346\226\207\345\255\227/WIKI.png"
	deleted:    "assets/\347\265\265\346\226\207\345\255\227/\345\242\250\351\217\241.gif"
	deleted:    "assets/\347\265\265\346\226\207\345\255\227/\345\277\203.gif"
	modified:   css/index.css
	modified:   css/wiki.css
	modified:   index.html
	modified:   javascript/wiki/wiki.js
	modified:   "javascript/\345\205\254\345\205\261/\347\247\201\347\224\250\345\255\227.js"
	modified:   "json/wiki/wiki\347\233\256\351\214\204.json"
	modified:   wiki.html
	new file:   "wiki/\345\214\243\346\261\241\347\263\273.md"
	new file:   "wiki/\345\226\256\345\255\227/\360\254\202\244.md"
	new file:   "wiki/\345\226\256\350\251\236/\363\260\234\200\363\260\234\201\363\260\234\202.md"

--- a/css/index.css
+++ b/css/index.css
@@ -84,6 +84,7 @@ body {
 	border-color: red;
 	background-color: red;
 	color: black;
+	margin-left: 30px;
 }
 
 #个人紹介 * {
@@ -137,6 +138,9 @@ body {
 #个人紹介>h3,
 #个人紹介>h3 * {
 	font-size: 35px;
+	text-decoration: underline;
+	padding-right: 30px;
+
 }
 
 #个人紹介 hr {
@@ -203,6 +207,24 @@ div.塊 {
 
 #愛好 * {
 	font-size: 23px;
+	background-color: #000000;
+}
+
+#愛好>h1,
+#愛好>h2,
+#愛好>h3 {
+	font-family: "只需HanaMinA";
+
+}
+
+#愛好>h2,
+#愛好>h2 * {
+	font-size: 45px;
+}
+
+#愛好 h3,
+#愛好 h3 * {
+	font-size: 35px;
 
 }
 
