--- a/css/wiki.css
+++ b/css/wiki.css
@@ -4,14 +4,16 @@
 	font-display: swap;
 }
 
-#content {
-	position: absolute;
-	top: 0;
-	left: 0;
+body {
 	margin: 0;
-	padding: 0;
-	min-height: 100%;
-	min-width: 100%;
+	writing-mode: vertical-rl;
+	overflow-y: hidden;
+}
+
+#content {
+	width: 100vw;
+	height: 100vh;
+	background-color: #1c1f24;
 }
 
 :lang(han-char) {
@@ -23,14 +25,6 @@
 /**                                                                     **/
 
 #䈎彙外 {
-	position: absolute;
-	top: 0;
-	left: 0;
-	margin: 0;
-	padding: 0;
-	min-height: 100%;
-	min-width: 100%;
-	writing-mode: vertical-rl;
 	background-color: #1c1f24;
 	font-family: 閹割unifont;
 	color: white;
@@ -42,7 +36,7 @@
 }
 
 #䈎彙 {
-	margin: 50px;
+	padding: 50px;
 	font-size: 20px;
 }
 
@@ -132,12 +126,9 @@
 
 
 #MD外部 {
-	width: 100vw;
-	height: 100vh;
-	writing-mode: vertical-rl;
+	font-family: 閹割unifont;
 	background-color: #1c1f24;
 	color: white;
-	font-family: 閹割unifont;
 }
 
 #MD外部 *::selection {
@@ -146,7 +137,7 @@
 }
 
 #MD內部 {
-	margin: 50px;
+	padding: 50px;
 	font-size: 20px;
 }
 
@@ -229,7 +220,6 @@
 }
 
 #錯誤介面 {
-	writing-mode: vertical-rl;
 	width: 100vw;
 	height: 100vh;
 	background-color: #0000ff;
